--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ ul li {
 .dark-background {
     background-color: #14131C;
     /* background: url('pics/photo-1437419764061-2473afe69fc2.jpg') top center no-repeat; */
-    background-size: cover;
+    height: 100%;
     background-attachment: fixed;
     box-shadow: inset 0 0 100px #000;
 }
