--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --nav-bg-color: #191a1f;
     --nav-text-color: #dfdfdf;
     --sec-h1-color: #5d3636;
-    --sec-bg-dark: rgba(5, 3, 20, 0.966);
+    --sec-bg-dark: -webkit-linear-gradient(white, #38495a);
 }
 
 * {
@@ -117,6 +117,7 @@ section h1 {
     background: url('pics/photo-1437419764061-2473afe69fc2.jpg') top center no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
     display: table;
     width: 100%;
     height: 100%;
@@ -149,8 +150,62 @@ section h1 {
 
 /* About */
 #about {
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
     box-shadow: inset 0 0 50px #000;
+    display: flex;
+    /* background: url('pics/undraw_reminder_pa79.svg') bottom right no-repeat; */
+    min-height: 1100px;
+}
+
+
+.about-header {
+    font-family: 'Montserrat Alternates', sans-serif;
+    background: -webkit-linear-gradient(rgb(240, 0, 228), #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
+.about-par {
+
+    margin-top: 70px;
+}
+
+#about-back {
+    z-index: 0;
+    opacity: 0.2;
+    position: absolute;
+    right: 2%;
+    top: 100%;
+    height: 800px;
+}
+
+.about-container {
+    display: flex;
+    line-height: 1.5;
+}
+
+.left {
+    width: 60%;
+    height: 100%;
+
+}
+
+.left p {
+    font-size: 19px;
+    font-family: 'Montserrat Alternates', sans-serif;
+
+}
+
+.right {
+    width: 40%;
+    height: 100%;
+    z-index: 100;
+    margin-top: 40px;
+}
+
+.right img {
+    height: 600px;
 }
 
 .img-skills img {
@@ -187,20 +242,35 @@ ul li {
     font-size: 25px;
 }
 
+#carouselExampleIndicators {
+    width: 100%;
+    height: 250px;
+    text-align: center;
+    display: none;
+}
+
+.aboutImgMobile {
+    height: 250px;
+    width: 100%;
+}
+
 /* Portfolio */
 .dark-background {
-    background-color: var(--sec-bg-dark);
+    /* background-color: var(--sec-bg-dark); */
     /* background: url('pics/photo-1437419764061-2473afe69fc2.jpg') top center no-repeat; */
+    height: 100%;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+    overflow: hidden;
     min-height: 1300px;
-    background-attachment: fixed;
-    box-shadow: inset 0 0 100px #000;
+    /* background-attachment: fixed; */
+    /* box-shadow: inset 0 0 100px #000; */
 }
 
 .dark-background h1 {
     color: #f4edff;
 }
 
-.card{
+.card {
     min-height: 100%;
     line-height: 3;
     font-size: 16px;
@@ -315,7 +385,7 @@ textarea:focus~.bar:after {
 
 
 /* Footer */
-#footer-text {
+.footer-text {
     color: black;
     text-align: center;
     font-size: 20px;
@@ -362,11 +432,45 @@ textarea:focus~.bar:after {
         background-color: var(--nav-bg-color);
     }
 
-    .navbar-nav li a  {
+    .navbar-nav li a {
         display: inline-block;
         width: 100%;
         text-align: center;
         margin-left: 60%;
+    }
+
+    #carouselExampleIndicators {
+        display: block;
+    }
+
+    #img01,
+    #img03,
+    #img05,
+    #img02,
+    #img04,
+    #img06 {
+        display: none;
+    }
+
+    .right {
+        width: 100%;
+    }
+
+    .right img {
+        width: 100%;
+    }
+
+    .left {
+        width: 100%;
+    }
+
+    .about-container {
+        display: block;
+    }
+
+    #about-back {
+        top: 100%;
+        height: 800px;
     }
 
 }
