--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
 
 html,
@@ -150,11 +149,11 @@ section h1 {
 
 /* About */
 #about {
-    /* background-color: #ffffff; */
     box-shadow: inset 0 0 50px #000;
     display: flex;
     /* background: url('pics/undraw_reminder_pa79.svg') bottom right no-repeat; */
     min-height: 1100px;
+    overflow-x: hidden;
 }
 
 
@@ -449,15 +448,18 @@ textarea:focus~.bar:after {
     #img02,
     #img04,
     #img06 {
+     
         display: none;
     }
 
     .right {
         width: 100%;
+        margin: 0px;
     }
 
     .right img {
         width: 100%;
+        margin-top: 0px;
     }
 
     .left {
